2007-12-19  Ping Cheng <pingc@wacom.com>
	* Support multimonitor setup on 4 directions

2007-12-13  Ping Cheng <pingc@wacom.com>
	* Updated wacomcpl
	* Incorporated Xorg 7.3 workaround from Magnus Vigerlöf
	* Label 0.7.9-4

2007-11-28  Ping Cheng <pingc@wacom.com>
	* Clean support of outbound tracking for Bamboo, etc
	* Updated kernel 2.4.x code
	* Label 0.7.9-3

2007-11-28  Ping Cheng <pingc@wacom.com>
	* Updated TwinView support to eliminate the unnecessary tvoffset (bug 1812593)
	* Incorporated Bartosz Fabianowski's patch (bug 1831998)
	* Patch 1818295 from Alexander V. Inyukhin
	* Patch 1834712 from Magnus Vigerlöf 
	* Fixed bug 1791005 (protocol 4 tablets don't support serial numbers)
	* Patch 1839008 from Magnus Vigerlöf 

2007-11-12  Ping Cheng <pingc@wacom.com>
	* Support legacy kernels
	* Label 0.7.9-2

2007-11-08  Ping Cheng <pingc@wacom.com>
	* Added support for BambooFun, Bamboo1 and Hummingbird
	* Support multimonitors horizontally and vertically in the same configuration

2007-10-24  Ping Cheng <pingc@wacom.com>
	* Added support for 2.6.22
	* Temporary workaround for Xorg 7.3 (Magnus and Ron)
	* Support up to 8 screens in xsetwacom
	* Label 0.7.9

2007-08-15  Ping Cheng <pingc@wacom.com>
	* Fixed a wacom.c bug for 2.4 and older 2.6's
	* Fixed a double click issue
	* Updated wacomcpl
	* Label 0.7.8-3

2007-07-24  Ping Cheng <pingc@wacom.com>
	* Fixed a xsetwacom bug
	* Updated wacomcpl
	* Label 0.7.8-2

2007-07-12  Ping Cheng <pingc@wacom.com>
	* Updated HowTo pages
	* Fixed a control panel button bug
	* Label 0.7.8-1

2007-06-25  Ping Cheng <pingc@wacom.com>
	* Merged patch 1689476 (Gregor Richards)
	* Merged patch 1674472 (Magnus Vigerlöf)
	* Updated new xsetwacom commands
	* Updated wacom man page
	* Updated webpages to make /PRE scalable 
	* Fixed an older UD pressure calculation error 
				(Pierre-Alain Tercier) 
	* Label 0.7.8