@@ -4,7 +4,8 @@ Special thanks go to:
 
 John E. Joganic <jej@j-arkadia.com> for establishing this project;
 
-Magnus Vigerlöf <wigge@bigfoot.com> for fixing bugs and supporting user requests.
+Magnus Vigerlöf <wigge@bigfoot.com> for fixing bugs, adding new 
+featuresand, and supporting user requests.
 
 Jens Georg <listen@jensgeorg.de> for being active and supportive 
 in discussion and development groups.
