@@ -1,6 +1,6 @@
 /*
  * Copyright 1995-2002 by Frederic Lepied, France. <Lepied@XFree86.org>
- * Copyright 2002-2007 by Ping Cheng, Wacom Technology. <pingc@wacom.com>		
+ * Copyright 2002-2008 by Ping Cheng, Wacom Technology. <pingc@wacom.com>		
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -59,25 +59,28 @@ static void sendAButton(LocalDevicePtr local, int button, int mask,
  *   screen/desktop size and the tablet size 
  ****************************************************************************/
 
-void xf86WcmMappingFactor(LocalDevicePtr local, int v0, int v1, int currentScreen)
+void xf86WcmMappingFactor(LocalDevicePtr local)
 {
 	WacomDevicePtr priv = (WacomDevicePtr) local->private;
 	int i = 0, minX = 0, minY = 0, maxX = 0, maxY = 0;
  
-	DBG(10, priv->debugLevel, ErrorF("xf86WcmMappingFactor v0=%d v1=%d "
-		" currentScreen=%d\n", v0, v1, currentScreen));
+	DBG(10, priv->debugLevel, ErrorF("xf86WcmMappingFactor \n"));
 
 	priv->sizeX = priv->bottomX - priv->topX - 2*priv->tvoffsetX;
 	priv->sizeY = priv->bottomY - priv->topY - 2*priv->tvoffsetY;
 	priv->maxWidth = 0, priv->maxHeight = 0;
 	
-	if ( ((priv->twinview != TV_NONE && priv->screen_no == -1) || 
+	if ( ((priv->twinview != TV_NONE) || /* TwinView & whole desktop */
+		/* stay in one screen at a time (multimonitor) */
 		!priv->common->wcmMMonitor || 
-		(screenInfo.numScreens > 1 && priv->screen_no != -1)) && 
-		(priv->flags & ABSOLUTE_FLAG) )
+		/* always stay in the configured screen */
+		(screenInfo.numScreens > 1 && priv->screen_no != -1))  
+		 && (priv->flags & ABSOLUTE_FLAG) )
 	{
-		priv->maxWidth = priv->screenBottomX[priv->currentScreen] - priv->screenTopX[priv->currentScreen];
-		priv->maxHeight = priv->screenBottomY[priv->currentScreen] - priv->screenTopY[priv->currentScreen];
+		priv->maxWidth = priv->screenBottomX[priv->currentScreen] - 
+			priv->screenTopX[priv->currentScreen];
+		priv->maxHeight = priv->screenBottomY[priv->currentScreen] - 
+			priv->screenTopY[priv->currentScreen];
 	}
 	else
 	{
@@ -120,12 +123,29 @@ static void xf86WcmSetScreen(LocalDevicePtr local, int *value0, int *value1)
 {
 	WacomDevicePtr priv = (WacomDevicePtr) local->private;
 	int screenToSet = -1, letfPadding = 0, topPadding = 0;
-	int i, x, y, v0 = *value0, v1 = *value1;
+	int i, j, x, y, v0 = *value0, v1 = *value1;
 
 	DBG(6, priv->debugLevel, ErrorF("xf86WcmSetScreen "
-		"v0=%d v1=%d\n", *value0, *value1));
+		"v0=%d v1=%d currentScreen=%d\n", *value0, 
+		*value1, priv->currentScreen));
 
 	if (!(local->flags & (XI86_ALWAYS_CORE | XI86_CORE_POINTER))) return;
+
+	if (priv->screen_no != -1)
+		priv->currentScreen = priv->screen_no;
+	else if (priv->currentScreen == -1)
+	{
+		/* Get the current screen that the cursor is in */
+#if defined WCM_XFREE86 || GET_ABI_MAJOR(ABI_XINPUT_VERSION) == 0
+		if (miPointerCurrentScreen())
+			priv->currentScreen = miPointerCurrentScreen()->myNum;
+#else
+		if (miPointerGetScreen(local->dev))
+			priv->currentScreen = miPointerGetScreen(local->dev)->myNum;
+#endif
+	
+	} else if (priv->currentScreen == -1) /* tool on the tablet */
+		priv->currentScreen = 0;
 
 	if (priv->twinview != TV_NONE && priv->screen_no == -1 && (priv->flags & ABSOLUTE_FLAG))
 	{
@@ -145,53 +165,55 @@ static void xf86WcmSetScreen(LocalDevicePtr local, int *value0, int *value1)
 		}
 	}
 
-	xf86WcmMappingFactor(local, v0, v1, screenToSet);
-
+	xf86WcmMappingFactor(local);
 	if (!(priv->flags & ABSOLUTE_FLAG) || screenInfo.numScreens == 1 || !priv->common->wcmMMonitor)
-	{
-		if (priv->screen_no != -1 && priv->currentScreen != priv->screen_no)
-			priv->currentScreen = priv->screen_no;
 		return;
-	}
 
-	/* tool on the tablet when driver starts */
-#if defined WCM_XFREE86 || GET_ABI_MAJOR(ABI_XINPUT_VERSION) == 0
-	if (miPointerCurrentScreen())
-		priv->currentScreen = miPointerCurrentScreen()->myNum;
-#else
-	if (miPointerGetScreen(local->dev))
-		priv->currentScreen = miPointerGetScreen(local->dev)->myNum;
-#endif
-
-	if (priv->twinview == TV_NONE && (priv->flags & ABSOLUTE_FLAG))
-	{
-		v0 = v0 > priv->bottomX ? priv->bottomX - priv->topX :
-			v0 < priv->topX ? 0 : v0 - priv->topX;
-		v1 = v1 > priv->bottomY ? priv->bottomY - priv->topY :
-			v1 < priv->topY ? 0 : v1 - priv->topY;
-	}
+	v0 = v0 > priv->bottomX ? priv->bottomX - priv->topX :
+		v0 < priv->topX ? 0 : v0 - priv->topX;
+	v1 = v1 > priv->bottomY ? priv->bottomY - priv->topY :
+		v1 < priv->topY ? 0 : v1 - priv->topY;
 
 	if (priv->screen_no == -1)
 	{
 		for (i = 0; i < priv->numScreen; i++)
 		{
-			if (v0 * priv->maxWidth >= priv->screenTopX[i] && 
-				v0 * priv->maxWidth <= priv->screenBottomX[i])
+			if (v0 * priv->factorX >= priv->screenTopX[i] && 
+				v0 * priv->factorX < priv->screenBottomX[i] - 0.5)
 			{
-				screenToSet = i;
-				break;
+				
+				for (j = 0; j < priv->numScreen; j++)
+				{
+					if (v1 * priv->factorY >= priv->screenTopY[j] && 
+						v1 * priv->factorY <= priv->screenBottomY[j] - 0.5)
+					{
+						if (j == i)
+						{
+							screenToSet = i;
+							break;
+						}
+					}
+				}
+					
+				if (screenToSet != -1)
+					break;
 			}
 		}
+		if (screenToSet != -1)
+		{
+			letfPadding = priv->screenTopX[screenToSet];
+			topPadding = priv->screenBottomX[screenToSet];
+		}
+		else
+		{
+			DBG(3, priv->debugLevel, ErrorF("xf86WcmSetScreen Error: "
+				"Can not find valid screen (currentScreen=%d)\n", 
+				priv->currentScreen));
+			return;
+		}
 	}
-	else 
+	else
 		screenToSet = priv->screen_no;
-
-	if (screenToSet == -1)
-	{
-		screenToSet = priv->currentScreen;
-		letfPadding = priv->screenTopX[screenToSet];
-		topPadding = priv->screenTopY[screenToSet];
-	}
 
 	x = (double)v0 * priv->factorX - letfPadding + 0.5;
 	y = (double)v1 * priv->factorY - topPadding + 0.5;
@@ -201,14 +223,11 @@ static void xf86WcmSetScreen(LocalDevicePtr local, int *value0, int *value1)
 	if (y >= screenInfo.screens[screenToSet]->height)
 		y = screenInfo.screens[screenToSet]->height - 1;
 
-	if (screenToSet != priv->currentScreen)
-	{
-		xf86XInputSetScreen(local, screenToSet, x, y);
-		DBG(10, priv->debugLevel, ErrorF("xf86WcmSetScreen"
+	xf86XInputSetScreen(local, screenToSet, x, y);
+	DBG(10, priv->debugLevel, ErrorF("xf86WcmSetScreen"
 			" current=%d ToSet=%d\n", 
 			priv->currentScreen, screenToSet));
-		priv->currentScreen = screenToSet;
-	}
+	priv->currentScreen = screenToSet;
 }
 
 /*****************************************************************************
@@ -919,16 +938,6 @@ void xf86WcmSendEvents(LocalDevicePtr local, const WacomDeviceState* ds)
 		}		
 	}
 
-#if defined WCM_XORG && GET_ABI_MAJOR(ABI_XINPUT_VERSION) > 0
-	/* Ugly hack for Xorg 7.3, which doesn't call xf86WcmDevConvert
-	 * for coordinate conversion at the moment */
-	/* The +-0.4 is to increase the sensitivity in relative mode.
-	 * Must be sensitive to which way the tool is moved or one way
-	 * will get a severe penalty for small movements. */
-	x = (int)((double)(x - priv->topX) * priv->factorX + (x>=0?0.4:-0.4));
-	y = (int)((double)(y - priv->topY) * priv->factorY + (y>=0?0.4:-0.4));
-#endif
-
 	if (type != PAD_ID)
 	{
 		/* coordinates are ready we can send events */
@@ -947,6 +956,22 @@ void xf86WcmSendEvents(LocalDevicePtr local, const WacomDeviceState* ds)
 			if (!is_absolute)
 				x *= priv->factorY / priv->factorX;
 
+#if defined WCM_XORG && GET_ABI_MAJOR(ABI_XINPUT_VERSION) > 0
+			/* Ugly hack for Xorg 7.3, which doesn't call xf86WcmDevConvert
+			 * for coordinate conversion at the moment */
+			/* The +-0.4 is to increase the sensitivity in relative mode.
+			 * Must be sensitive to which way the tool is moved or one way
+			 * will get a severe penalty for small movements. */
+			x = (int)((double)(x - priv->topX) * priv->factorX + (x>=0?0.4:-0.4));
+			y = (int)((double)(y - priv->topY) * priv->factorY + (y>=0?0.4:-0.4));
+
+			/* map to a specific screen */
+			if (priv->screen_no != -1 || priv->twinview != TV_NONE)
+			{
+				x += priv->screenTopX[priv->currentScreen];
+				y += priv->screenTopY[priv->currentScreen];
+			}
+#endif
 			sendCommonEvents(local, ds, x, y, z, v3, v4, v5);
 
 			if(!(priv->flags & BUTTONS_ONLY_FLAG))
@@ -1027,6 +1052,7 @@ void xf86WcmSendEvents(LocalDevicePtr local, const WacomDeviceState* ds)
 		priv->oldStripY = 0;
 		priv->oldRot = 0;
 		priv->oldThrottle = 0;
+		priv->currentScreen = -1;
 	}
 }
 
